src/sass/archive-attorneys.scss
@import './import/variables';


#attorneys-archive-image-swap-section {
	.section-header {
		margin-bottom: 6rem;
	}
	.attorneys-list {
		display: flex;
		flex-wrap: wrap;
		flex: 1 0 calc( 60rem + 1em );
		padding-right: 1em;
		padding-bottom: 0;
		max-height: 50vh;
		overflow-y: auto;
		margin-bottom: 3rem;
		overflow-x: hidden;
		max-width: 100%;
		@media (min-width: $vp_m) {
			padding-bottom: 6rem;
			margin-bottom: 0;
		}
		@media (min-width: $vp_sm) {
			max-width: calc( 60rem + 1em );
			max-height: none;
		}
		font-size: 2.4rem;
		@media (max-width: 650px) and (min-width: $vp_xs) {
			font-size: 2.2rem;
		}
	}
	.listed-attorney {
		width: 100%;
		@media (min-width: 475px) {
			width: 50%;
		}
		display: flex;
		align-items: center;
		.archive-attorney-name {
			color: $dark;
			white-space: nowrap;
		}
	}
}
.anchor-attorney.line-left {
  margin-left: 1.5em;
}
/*   Image Swap   */
#attorneys-archive-image-swap-section {
	background-size: cover;
	background-repeat: no-repeat;
	background-position: 50% 50%;
}
.container-attorneys-archive-image-swap-section {
	@media (min-width: $vp_m) {
		padding-right: 0;
	}
	padding-bottom: 0;
}
.image-swap {
	display: flex;
	flex-wrap: wrap;
	@media (min-width: $vp_m) {
		flex-wrap: nowrap;
	}
	.image-swap-imgs {
		// flex: 1 0 58.4rem;
		width: 100%;
		@media (min-width: $vp_m){
			width: 63.4rem;
		}
		position: relative;
	}
}
.image-swap-imgs {
	position: relative;
	.ctnr-image-swap-img {
		position: absolute;
		width: 100%;
		height: 100%;
		left: 50%;
		transform: translate3d(-50%, 0, 0);
		bottom: 0;
		text-align: center;
		&:first-child {
			position: relative;
		}
	}
}
@import './import/attorneys-archive-img';
.ctnr-archive-attorney-img {
	position: absolute;
	bottom: 0;
	display: flex;
	align-items: flex-end;
	height: 100%;
	left: 0;
	right: 0;
	@media (min-width: 1100px) {
		height: auto;
	}
	max-height: 50vh;
	@media (min-width: $vp_m) {
		max-height: none;
	}
	@at-root .ctnr-image-swap-img:first-child & {
		position: relative;
	}
	> img {
		// max-height: 50rem;
		width: auto;
		height: auto;
		max-width: 100%;
		max-height: 100%;
		margin-left: auto;
		margin-right: auto;
	}
}

.ctnr-archive-attorney-name-title {
  display: inline-block;
	left: 50%;
  transform: translate3d(-50%, 0, 0);
  width: auto;
  text-shadow: 0 .05em .1em black;
  background-image: radial-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0) 70%);
  padding: 3rem;
  white-space: nowrap;
}
.imageSwap {
	.imageSwapController {
		transition: $smooth-transition;
		text-shadow: 0 0 transparent;
		transform: translateZ(0);
		backface-visibility: hidden;
		a {
			text-decoration: none;
		}
		&.active {
			color: $secondary;
			text-shadow: .05em 0 $secondary;
			transform: translate3d(1em, 0, 0);
		}
	}
	.imageSwapTar {
		transition: $smooth-transition;
		backface-visibility: hidden;
		opacity: 0;
		&:not(:first-child) {
			// display: none;
		}
		&.shown,
		&.showing,
		&.hiding {
			// display: block;
		}
		&.shown {
			opacity: 1;
		}
		&,
		&.hiding {
			opacity: 0;
		}
		&.show {
			opacity: 1;
		}

	}
}
/*   /Image Swap   */

